# media-packer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  DEPENDENCY_INTEGRATION.md  NAMING_UPDATE.md  OPTIMIZATION_GUIDE.md  PROJECT_FINAL_STATUS.md  PROJECT_SUMMARY.md  PYTHON_ENV_GUIDE.md  README.md  SCRIPT_FIX_REPORT.md  SIMPLIFY_UPDATE.md  UNIVERSAL_INSTALL_GUIDE.md  USAGE_EXAMPLES.md  VPS_DEPLOYMENT_GUIDE.md  VPS_INSTALL_GUIDE.md  debug-install.sh  demo_naming.py  demo_simple.py  display_fix.py  examples.py  install.sh  install_deps.py  local-deploy-test.sh  media_packer_all_in_one.py  media_packer_simple.py  progress_fix.py  pyproject.toml  quick-install.sh  quick-use.sh  requirements.txt  requirements_simple.txt  setup.sh  simple_gui_test.py  simple_interactive.py  start.py  test-download.sh  test-pipe.sh  test_basic.py  (+8 more)
media_packer/: __init__.py  config.py  interactive.py
media_packer/cli/: __init__.py
media_packer/core/: automation.py  metadata.py  processor.py  torrent.py
media_packer/gui/: __init__.py  components.py  dialogs.py  widgets.py
media_packer/models/: __init__.py
media_packer/utils/: naming.py
